# fqcsim

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml
docs/examples/: lucj_energy.ipynb
src/fqcsim/utils/: __init__.py  circuit_energy.py  ucj_param_energy.py
tests/: circuit_energy_test.py
